# NamePending

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  ReadMe.md  cmake commands.txt  demo.trace  genindex.html  intro.html  matrix.html  objects.inv  search.html  searchindex.js  vector.html
_sources/: intro.md  matrix.md
builds/: CMakeCache.txt  Makefile  cmake_install.cmake
builds/demos/: Makefile  cmake_install.cmake  demo
demos/: CMakeLists.txt  demo.cpp  test_lapack.cpp
docs/: _config.yml  _toc.yml  intro.md  vector.md
includes/: mathlib.hpp
py_demos/: demo_matrix.py  demo_timing.py  demo_vector.py
src/: bind_bla.cpp  complex.cpp  demo_vector  expression.hpp  fraction.cpp  fraction.hpp  lapack_interface.hpp  mathlib.hpp  matrix.cpp  matrix.hpp  matrix_simd_ops.hpp  polynomial.cpp  polynomial.hpp  vector.cpp  vector.hpp
tests/: CMakeLists.txt  perf_vector.cpp  test_matrix.cpp  test_vector.cpp  tests_vector.cpp
